# cppbackend

./: .gitignore  prepare_env.sh
.github/workflows/: main.yml
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h
sprint1/problems/final_task/solution/: Dockerfile  default.txt
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.h
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/: myprofile.txt
sprint1/problems/sum/solution/: main.cpp
sprint1/samples/tcp-udp/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/examples/boost_log/: CMakeLists.txt
sprint2/examples/boost_log/src/: boostlogger.h  main.cpp  simplelogger.h
sprint2/problems/command_line/solution/: CMakeLists.txt  results.txt  run_server.sh  test.http
sprint2/problems/game_state/solution/: CMakeLists.txt  test.http
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile  run_server.sh  test.http
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: test.http
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/temp/: CMakeLists.txt
sprint2/problems/server_logging/temp/src/: lesson.cpp  logger.cpp  logger.h  main.cpp
sprint2/problems/static_content/solution/: run_server.bat
sprint2/problems/time_control/solution/: curl.sh  test.http
sprint3/problems/final_task/data/: config.json
sprint3/problems/final_task/src/: app.cpp  app.h  cmd_parser.cpp  json_loader.cpp  model.cpp  model.h  player.cpp  player.h
sprint3/problems/find_return/solution/: CMakeLists.txt  Dockerfile  run_server.sh  test.http
sprint3/problems/find_return/solution/data/: config.json
sprint3/problems/find_return/solution/src/: app.cpp  app.h  json_loader.cpp  model.cpp  model.h  player.h  request_handler.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  curl.sh  test.http
sprint3/problems/instrumentation/solution/: gmon.out
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: test.http
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: app.cpp
sprint3/problems/stress/solution/: load.yaml
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  input.json
sprint4/problems/final_task/src/: app.cpp  app.h  collision_detector.cpp  http_server.cpp  http_server.h  json_loader.cpp  logger.cpp  logger.h  main.cpp  model.cpp  model.h  request_handler.h  tagged.h
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  request_test.http
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  curles  request_test.http
(+126 files in other folders)
